# mmcli

./: .gitignore  README.md  config.toml  main.py  media_converter.py  media_downloader.py  multimedia_cli.py  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py
app/tools/: media_converter.py  media_downloader.py  youtube_downloader.py
app/utils/: command_manager.py  config.py  media_format.py
doc/: CONTRIBUTOR_GUIDANCE.md  commands.md  configuration.md
tests/: test_command_manager.py  test_integration.py  test_media_converter.py  test_media_downloader.py  test_media_format.py  test_playlist_downloader.py
